--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"server": "yarn json-server --watch server.json --delay 500"
 	},
 	"dependencies": {
 		"axios": "^0.27.2",
+		"json-server": "^0.17.0",
+		"polished": "^4.2.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.3.0",
