--- a/.eslintrc
+++ b/.eslintrc
@@ -34,12 +34,16 @@
 		"react/react-in-jsx-scope": "off",
 		"react/jsx-props-no-spreading": "off",
 		"react/require-default-props": "off",
-		"import/prefer-default-export": "off"
-		// "react/function-component-definition": [
-		// 	"error",
-		// 	{
-		// 		"namedComponents": "arrow-function"
-		// 	}
-		// ]
+		"import/prefer-default-export": "off",
+		"react/jsx-no-bind": [
+			"error",
+			{
+				"ignoreDOMComponents": false,
+				"ignoreRefs": false,
+				"allowArrowFunctions": true,
+				"allowFunctions": true,
+				"allowBind": false
+			}
+		]
 	}
 }
